styles/styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto", serif;
}

:root {
  --header-bg: #604130;
  --body-bg: #ded0c7;
  --footer-bg: #3d2620;
}

body {
  width: 100%;
  height: 100vh;
  background-color: var(--body-bg);
  display: flex;
  flex-direction: column;
  overflow: hidden;

  header {
    width: 100%;
    height: 80px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--header-bg);
    padding: 12px 16px;
    text-align: center;

    .cafeIcon {
      width: 45px;
      height: 45px;
      border-radius: 6px;
      overflow: hidden;

      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: center center;
      }
    }

    .title {
      h1 {
        font-size: 18px;
        color: white;
      }

      p {
        font-size: 14px;
        color: #c2afa4;
      }
    }
  }

  main {
    width: 100%;
    height: 100%;
    padding: 12px 16px;
    position: relative;

    .mainTitle {
      position: absolute;
      top: 5%;
      display: flex;
      flex-direction: column;
      gap: 12px;

      h1 {
        font-size: 24px;
        color: #3a2c23;
      }

      p {
        font-size: 14px;
        color: #4a3f35;
      }
    }

    .categories {
      width: 100%;
      padding: 12px 0;
      display: flex;
      justify-content: center;
      text-align: center;
      position: absolute;
      top: 60%;
      left: 50%;
      transform: translate(-50%, -50%);

      .navbarLinks {
        display: flex;
        flex-direction: column;
        gap: 18px;
        list-style: none;

        li {
          a {
            font-size: 24px;
            text-decoration: none;
            padding: 6px 12px;
            border-radius: 50px;
            color: black;
            background-color: transparent;
            transition: all 0.3s ease-in-out;

            &.active {
              background-color: var(--footer-bg);
              color: white;
            }

            &:hover {
              background-color: var(--footer-bg);
              color: white;
            }
          }
        }
      }
    }
  }

  footer {
    width: 100%;
    height: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--footer-bg);

    h4 {
      color: aliceblue;
      text-transform: uppercase;
      letter-spacing: 2px;
    }
  }
}

